[package]

name = "sound_stream"
version = "0.1.0"
authors = ["mitchmindtree <mitchell.nordine@gmail.com>"]

[lib]
name = "sound_stream"

[dependencies.rust-portaudio]
git = "https://github.com/jeremyletang/rust-portaudio"

[dependencies.time]
git = "https://github.com/rust-lang/time"

[dependencies.sample]
git = "https://github.com/RustAudio/sample"
